--- a/lib/templates/vhost.sh.template
+++ b/lib/templates/vhost.sh.template
@@ -1,3 +1,4 @@
+sudo apt-get install -y php5 php5-cli php5-curl php5-mcrypt php5-gd php5-imap php5-json
 sudo apt-get install apache2-mpm-itk -y
 
 user=vagrant
