--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "async": "^1.5.0",
     "colors": "^1.1.2",
     "command-line-args": "^2.1.3",
+    "commander": "^2.9.0",
+    "ip": "^1.1.0",
     "prompt": "^0.2.14"
   }
 }
