--- a/lib/templates/mysql.sh.template
+++ b/lib/templates/mysql.sh.template
@@ -1,5 +1,7 @@
 ### From Installing MySQL
 
+sudo echo "CREATE DATABASE IF NOT EXISTS '###MYSQLDATABASE###'" | mysql -u root -proot
+
 sudo debconf-set-selections <<< 'mysql-server \
  mysql-server/root_password password ###MYSQLPASSWORD###'
 sudo debconf-set-selections <<< 'mysql-server \
@@ -13,4 +15,4 @@ EOF
 
 sudo service mysql restart
 
-sudo echo "CREATE DATABASE IF NOT EXISTS ###MYSQLDATABASE###" | mysql -u root -proot
+
